override layout bug fix max-width.

--- a/dd-wrt-forum-inspired-themes.user.styl
+++ b/dd-wrt-forum-inspired-themes.user.styl
@@ -2495,7 +2495,7 @@ b() { box-shadow: arguments }
       // https://forum.dd-wrt.com/phpBB2/viewtopic.php?t=301950
       font-size: 14px
       line-height: 1.4em
-      max-width: 940px
+      max-width: 940px i
       display: block
       text-overflow: ellipsis
       overflow: auto
